# cppCrytographicService

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile
docker/base/: Dockerfile
scripts/: build.sh  buildBase.sh  run-code-formatter.sh  run-valgrind-with-ut.sh
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/cpp/: CMakeLists.txt
src/lib/cpp/ciphers/: CMakeLists.txt  cipher_if.hpp
src/lib/cpp/ciphers/caesar/: caesar_cipher.cpp  caesar_cipher.hpp
src/lib/cpp/ciphers/vigenere/: vigenere_cipher.cpp  vigenere_cipher.hpp
src/lib/cpp/crackers/: CMakeLists.txt  cracker_if.hpp
src/lib/cpp/language_detectors/: CMakeLists.txt
src/lib/cpp/shifters/: CMakeLists.txt  shifter_if.hpp
src/lib/cryptographic-algorithms/: CMakeLists.txt  cryptographic_algorithm_if.hpp
src/lib/language-detectors/: CMakeLists.txt  language_detector_if.hpp
src/main/cpp/: CMakeLists.txt  main.cpp
src/tests/cpp/: CMakeLists.txt
src/tests/cpp/ciphers/: CMakeLists.txt
src/tests/cpp/ciphers/caesar/: caesar_cipher_test.cpp
src/tests/cpp/ciphers/vigenere/: vigenere_cipher_test.cpp
src/tests/cpp/crackers/: CMakeLists.txt  caesar_cracker_test.cpp
src/tests/cpp/cryptographic-algorithms/: CMakeLists.txt
src/tests/cpp/cryptographic-algorithms/caesar/: caesar_test.cpp
src/tests/cpp/language-detectors/: CMakeLists.txt
src/tests/cpp/language-detectors/trie/: trie_language_detector_test.cpp  trie_tree_test.cpp
src/tests/cpp/shifters/: CMakeLists.txt
src/tests/cpp/shifters/english/: english_shifter_test.cpp
(+12 files in other folders)
